2008-07-04  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #541578

	* gmime/gmime-message.c (g_mime_message_add_recipient): Change
	'type' argument to const char *.
	(g_mime_message_add_recipients_from_string): Same.

2008-06-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart.c (g_mime_multipart_remove_part): Fixed
	g_return macros to return bool instead of void.

	* gmime/gmime-cipher-context.c (g_mime_signer_get_errors): Fixed
	the function name to match the prototype name.

	* gmime/gmime-header.c (g_mime_header_list_remove): Fixed the
	g_return macros here too. Also need to make sure to return TRUE at
	the end of the function.

	* gmime/gmime-part.c (write_content): Don't unred filtered_stream
	if we haven't used it.

	* gmime/gmime-object.c (g_mime_object_remove_header): Fixed
	g_return macros, this function returns bool, not void.

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Get rid of
	unused variable.

2008-06-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.3.4

2008-06-15  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (status_backup): Use the bitwise
	nearest_pow() implementation.

2008-06-14  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c: When mallocing header/raw buffers, malloc
	a power-of-2 rather than a power-of-2 + 1. Also optimized the
	logic to calculate the amount of memory to realloc.

2008-06-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.h (GMIME_QP_ENCODE_LEN): Add an extra byte
	for \n in the case of quoted_encode_close(). Thanks to Peter
	Bloomfield for discovering this.

2008-06-08  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): added
	constants for MD2, TIGER and HAVAL.

2008-06-08  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.3.3

	* docs/reference/changes-2.4.sgml: Updated.

	* PORTING: Updated.
